--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "jsx-props-no-spreading":"off",
         "react/prop-types": "off",
         "import/no-cycle": "off",
-        "consistent-return": "off"
+        "consistent-return": "off",
+        "no-extraneous-dependencies":"off"
     }
 }
